Changed the menu background image and underlined,bold the h5s for the menu section. Also centered the footer headings as they were not centered properly, changed the margin of the social media icons as there was a bug on the ipad and changed the phone, address and location to icons.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,7 @@ header{
 
 .list-style {
     list-style-type: none;
+    padding-right: 30px;
     }
 
 .footer-style {
@@ -94,13 +95,15 @@ footer {
 }
 
 
+
 /*****Font Awesome*****/
 
 .fa-footer {
     color: #e7e7e7;
     display: inline;
     font-size: 40px;
-    margin-left: 20px;
+    margin-left: 10px;
+    padding: 0;
 }
 
 .fa-footer:hover {
@@ -299,17 +302,17 @@ Color: #3c3030;
 /***Menu***/
 
 .menu-image {
-    background-image: url("../images/menubackground.jpg");
+    background-image: url("../images/menubg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
      height: 800px;
      background-attachment: fixed;
      overflow: auto;
-     box-shadow: inset 0 0 0 1000px rgba(0,0,0,.1);
+     box-shadow: inset 0 0 0 1000px rgba(0,0,0,.3);
 }
 
 .padding-menu {
-    padding-left: 30px;
+    padding-left: 50px;
 }
 
 .h1-menu {
@@ -327,8 +330,9 @@ Color: #3c3030;
 dt {
     Font-family: 'Raleway', serif;
     color: #e7e7e7;
-    Font-size: 100%;
+    Font-size: 2.5vh;
     Font-weight: 400;
+    text-decoration: underline;
 }
 
 dd {
